--- a/page45.html
+++ b/page45.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">website maker</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-eq" data-rv-view="822" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-eq" data-rv-view="822" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -65,7 +65,7 @@
             <div class="mbr-table-md-up">
 
               <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 38%;">
-                  <div class="mbr-figure"><img src="assets/images/fixxface-1-1400x2488.png"></div>
+                  <div class="mbr-figure"><img src="assets/images/s-60178444-1080x1080.jpg"></div>
               </div>
 
               
