--- a/page18.html
+++ b/page18.html
@@ -34,7 +34,7 @@
 
                     <div class="navbar-brand">
                         <a href="index.html" class="mbri-speed mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption" href="https://mobirise.com">fixxface</a>
+                        <a class="navbar-caption" href="index.html">fixxface</a>
                     </div>
 
                 </div>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">web site maker</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-6k" data-rv-view="259" style="background-color: rgb(242, 242, 242); padding-top: 200px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/i">build a website for free</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-6k" data-rv-view="259" style="background-color: rgb(242, 242, 242); padding-top: 200px; padding-bottom: 120px;">
 
     
     <div class="container">
