--- a/page24.html
+++ b/page24.html
@@ -34,7 +34,7 @@
 
                     <div class="navbar-brand">
                         <a href="index.html" class="mbri-speed mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption" href="https://mobirise.com">fixxface</a>
+                        <a class="navbar-caption" href="index.html">fixxface</a>
                     </div>
 
                 </div>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">website creation software</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-b6" data-rv-view="358" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-b6" data-rv-view="358" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
