--- a/page30.html
+++ b/page30.html
@@ -34,7 +34,7 @@
 
                     <div class="navbar-brand">
                         <a href="index.html" class="mbri-speed mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption" href="https://mobirise.com">fixxface</a>
+                        <a class="navbar-caption" href="index.html">fixxface</a>
                     </div>
 
                 </div>
@@ -58,7 +58,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/e">web page development software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/j">design a website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
