--- a/page43.html
+++ b/page43.html
@@ -34,7 +34,7 @@
 
                     <div class="navbar-brand">
                         <a href="index.html" class="mbri-speed mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption" href="https://mobirise.com">fixxface</a>
+                        <a class="navbar-caption" href="index.html">fixxface</a>
                     </div>
 
                 </div>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-eg" data-rv-view="758" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-eg" data-rv-view="758" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
