--- a/page45.html
+++ b/page45.html
@@ -34,7 +34,7 @@
 
                     <div class="navbar-brand">
                         <a href="index.html" class="mbri-speed mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption" href="https://mobirise.com">fixxface</a>
+                        <a class="navbar-caption" href="index.html">fixxface</a>
                     </div>
 
                 </div>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">site builder</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-eq" data-rv-view="775" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/j">how to design your own website</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-eq" data-rv-view="775" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
